// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform attributes Should transform boolean prop 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, undefined, {
  focused: true
}, undefined);"
`;

exports[`transform attributes Should transform different props variations 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", \\"Key\\", undefined, {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, undefined);"
`;

exports[`transform attributes Should transform different props with ref 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", \\"Key\\", myRef, {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, undefined);"
`;

exports[`transform attributes Should transform key prop 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", \\"Key\\", undefined, undefined, undefined);"
`;

exports[`transform attributes Should transform props spread 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, undefined, { ...props
}, undefined);"
`;

exports[`transform attributes Should transform props with expressions 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, undefined, {
  prop1: 1 + 1
}, undefined);"
`;

exports[`transform attributes Should transform simple props 1`] = `
"import { html as _html } from \\"@whatsup-js/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, undefined, {
  prop1: \\"value1\\"
}, undefined);"
`;
